[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[project]
name = "rs_fast_one_hot"
version = "0.1.0"
authors = [{name = "GAlexander", email = "g.alexander.box@gmail.com"}]
description = "Simple class for fast one hot encoding. Support scikit-learn transformer interface and multithreading."
readme = "README.md"
requires-python = ">=3.7, <3.14.0"
dependencies = [
    "scikit-learn"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
[project.urls]
"Homepage" = "https://github.com/g-alexander/rs_fast_one_hot"
"Bug Tracker" = "https://github.com/g-alexander/rs_fast_one_hot/issues"
